--- a/FRONT_END/package.json
+++ b/FRONT_END/package.json
@@ -13,7 +13,9 @@
     "@types/styled-components": "^5.1.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.1",
     "react-icons": "^5.0.0",
+    "safe-eval": "^0.4.1",
     "styled-components": "^6.1.8",
     "tslib": "^2.6.2"
   },
@@ -27,6 +29,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.11"
+    "vite": "^5.0.12"
   }
 }
